--- a/style.css
+++ b/style.css
@@ -415,6 +415,7 @@ iframe {
         padding: 1rem 1rem;
         column-gap: 1rem;
         flex-wrap: wrap;
+        overflow: unset;
     }
 
     .content-placeholder {
